improved updates